--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "bulma": "^0.9.1",
     "core-js": "^3.7.0",
     "ionicons": "^5.2.3",
     "vue": "^2.6.11",
     "vue-router": "^3.4.9",
     "vue-star-rating": "^1.7.0",
-    "vuex": "^3.5.1"
+    "vuex": "^3.5.1",
+    "vuex-persistedstate": "^4.0.0-beta.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
