--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "server": "json-server --watch public/json/full.json",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^0.21.0",
-    "bulma": "^0.9.1",
+    "buefy": "^0.9.4",
     "core-js": "^3.7.0",
     "ionicons": "^5.2.3",
     "vue": "^2.6.11",
+    "vue-carousel": "^0.18.0",
     "vue-router": "^3.4.9",
     "vue-star-rating": "^1.7.0",
     "vuex": "^3.5.1",
