--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "buefy": "^0.9.4",
+    "bulma": "^0.9.1",
     "core-js": "^3.7.0",
     "ionicons": "^5.2.3",
     "vue": "^2.6.11",
@@ -29,6 +30,9 @@
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
